Fixed spacing on bio images

--- a/ourteam.css
+++ b/ourteam.css
@@ -90,6 +90,8 @@ header nav img {
 	width: 30%;
 	height: auto;
 	border-radius: 50%;
+	margin-left: 1rem;
+	margin-right: 1rem;
 }
 
 .mainContainer {
@@ -102,6 +104,7 @@ header nav img {
 	padding-top: 2rem;
 	width: 80%;
 	background-image: url('assets/chocolate-background-transparent.jpg');
+	background-repeat: no-repeat;
 }
 
 .headerText {
